@@ -2,7 +2,7 @@
  *
  * Credit Card Number
  * https://github.com/sualeh/credit_card_number
- * Copyright (c) 2014-2025, Sualeh Fatehi.
+ * Copyright (c) 2014-2026, Sualeh Fatehi.
  *
  */
 package us.fatehi.creditcardnumber;
@@ -35,7 +35,7 @@ public enum ServiceCode2 implements ServiceCodeType {
   /** See ServiceCodeType#getDescription() */
   @Override
   public String getDescription() {
-    return String.format("Authorization Processing: %s.", authorizationProcessing);
+    return "Authorization Processing: %s.".formatted(authorizationProcessing);
   }
 
   /** See ServiceCodeType#getValue() */
@@ -47,6 +47,6 @@ public enum ServiceCode2 implements ServiceCodeType {
   /** See Object#toString() */
   @Override
   public String toString() {
-    return String.format("%d - %s", value, getDescription());
+    return "%d - %s".formatted(value, getDescription());
   }
 }
